css: fix small scrollbars for code (compatibility with cssutils)

--- a/content/media/css/luffy.code.less
+++ b/content/media/css/luffy.code.less
@@ -20,7 +20,7 @@ pre, code, code .amp, pre .amp {
     &::-webkit-scrollbar-track-piece {
 	-webkit-border-radius: 3px;
     }
-    &::-webkit-scrollbar-thumb:vertical, &::-webkit-scrollbar-thumb:horizontal {
+    &::-webkit-scrollbar-thumb {
 	height: 5px;
 	background-color: #666;
 	-webkit-border-radius: 3px;
